package DesignPatterns.StructuralType.Adapter.ObjectAdapter;


public interface IVoltage5V {
	public int output5V();
}
