@startuml

interface IVoltage5V {
public int output5V();
}

class Voltage220V {
public int output220V()
}

class VoltageAdapter  implements IVoltage5V {
Voltage220V voltage220v;
VoltageAdapter(Voltage220V voltage220v
public int output5V()
}

class Phone {
public void charging(IVoltage5V iVoltage5V)
}

class Client {
Phone phone = new Phone();
phone.charging(new VoltageAdapter());
}

VoltageAdapter o-- Voltage220V


IVoltage5V <.. Phone

Phone <.. Client
VoltageAdapter <.. Client
Voltage220V <.. Client

@enduml